--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "heroicons": "^2.2.0",
     "next": "15.1.7",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "swiper": "^11.2.4",
+    "tailwind-clip-path": "^1.0.0"
   },
   "devDependencies": {
     "postcss": "^8",
