--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "headlessui": "^0.0.0",
     "heroicons": "^2.2.0",
     "lucide-react": "^0.477.0",
+    "mongoose": "^8.12.0",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
